--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,11 @@
 	},
 	"require": {
 		"php": ">=5.3.1",
-		"nette/application": "~2.3"
+		"nette/application": "~2.4"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "4.3.*"
+		"phpunit/phpunit": "4.3.*",
+		"latte/latte": "^2.4"
 	},
 	"autoload": {
 		"classmap": ["src/"]
